--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                         Open Air Open Mic 2
                     </h2>
                     <p>
-                        Join us for our second Open Air Open Mic at 17:00 on Sunday 5 June, 2022 at Kala Kathoumena. There's no theme this time, so bring whatever you've got. Enjoy a cold beer. Blow us away with your words. See you Sunday.
+                        Join us for our second Open Air Open Mic at Kala Kathoumena on Sunday June 5, 2022 at 17:00. There's no theme this time, so bring whatever you've got. Enjoy a cold beer. Blow us away with your words. See you Sunday.
                     </p> 
                     <p>
                         29 May 2022
