--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                             Dear People
                         </h2>
                         <p>
-                            Welcome to our new-ish home on the web. We aren't doing workshops these days. Scroll down for a few recordings from the vault and any upcoming events.
+                            Welcome to our new-ish home on the web. We aren't running any workshops these days. Scroll down for a few recordings from the vault and any upcoming events.
                         </p> 
                         <p>
                             27 April 2024
