Add og description, update og meta

--- a/contact.html
+++ b/contact.html
@@ -13,13 +13,14 @@
         <link rel="manifest" href="/manifest.json" type="application/json">
         <link rel="canonical" href="https://writecy.com/contact">
         <title>Contact - Write CY</title>     
-        <meta name="description" content="Fill out the form to get in touch. We promise not to add you to any mailing lists.">
+        <meta name="description" content="Contact Write CY.">
         <meta name="thumbnail" content="https://writecy.com/assets/graphics/share.webp">
         <meta property="og:site_name" content="Write CY">
-        <meta property="og:title" content="Write CY">
+        <meta property="og:title" content="Contact">
+        <meta property="og-description" content="Contact Write CY.">
         <meta property="og:type" content="website">
-        <meta property="og:url" content="https://writecy.com/assets/graphics/share.webp">
-        <meta property="og:image" content="">
+        <meta property="og:url" content="https://writecy.com/contact">
+        <meta property="og:image" content="https://writecy.com/assets/graphics/share.webp">
         <meta property="og:image:type" content="image/webp">
         <meta property="og:image:width" content="720">
         <meta property="og:image:height" content="720">
