--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
         <meta name="thumbnail" content="https://writecy.com/assets/graphics/share.webp">
         <meta property="og:site_name" content="Write CY">
         <meta property="og:title" content="Write CY">
+        <meta property="og-description" content="This page features selected performances from the Write CY archive as well as news of upcoming events.">
         <meta property="og:type" content="website">
-        <meta property="og:url" content="https://writecy.com/assets/graphics/share.webp">
-        <meta property="og:image" content="">
+        <meta property="og:url" content="https://writecy.com">
+        <meta property="og:image" content="https://writecy.com/assets/graphics/share.webp">
         <meta property="og:image:type" content="image/webp">
         <meta property="og:image:width" content="720">
         <meta property="og:image:height" content="720">
