--- a/info.html
+++ b/info.html
@@ -13,13 +13,15 @@
         <link rel="manifest" href="/manifest.json" type="application/json">
         <link rel="canonical" href="https://writecy.com/info">
         <title>Info - Write CY</title>  
-        <meta name="description" content="Write CY is a Nicosia-based platform for creative writing and community storytelling.">
+        <meta name="description" content="Information about Write CY and this website.">
         <meta name="thumbnail" content="https://writecy.com/assets/graphics/share.webp">
         <meta property="og:site_name" content="Write CY">
-        <meta property="og:title" content="Write CY">
+        <meta property="og:title" content="Info">
         <meta property="og:type" content="website">
-        <meta property="og:url" content="https://writecy.com/assets/graphics/share.webp">
-        <meta property="og:image" content="">
+        <meta property="og-description" content="Information about Write CY and this website.">
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://writecy.com/info">
+        <meta property="og:image" content="https://writecy.com/assets/graphics/share.webp">
         <meta property="og:image:type" content="image/webp">
         <meta property="og:image:width" content="720">
         <meta property="og:image:height" content="720">
