--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="color-scheme" content="light dark">
         <link rel="preload" href="/assets/type/mono45headline_light.woff2" as="font" type="font/woff2" crossorigin="anonymous">
         <link rel="preload" href="/assets/type/g2erika_regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-        <link rel="stylesheet" href="/style.min.css?v=2">
+        <link rel="stylesheet" href="/style.css">
         <link rel="icon" href="/favicon.ico" type="image/x-icon" sizes="32x32">
         <link rel="icon" href="/favicon.svg" type="image/svg+xml" sizes="any">
         <link rel="apple-touch-icon" href="/assets/icons/apple_touch_icon.png" type="image/png">
