--- a/max-sheridan.html
+++ b/max-sheridan.html
@@ -85,7 +85,7 @@
                     <div class="overlay"></div>
                     <div class="track">
                         <h2 class="track-title">Press the Button, Kim</h2>
-                        <p class="track-description">A paeon to our favorite evil communist dictator. Recorded live at a Write CY open mic, then re-recorded on Max's couch after the original was lost.</p>
+                        <p class="track-description">A paeon to our favorite evil communist dictator, re-recorded on Max's couch after the live version was lost.</p>
                         <div class="audio-player margins-off">
                             <audio preload="none" src="assets/audio/press_the_button_kim.mp3" title="Max Sheridan performing Press the Button, Kim"></audio>
                             <div class="controls">
