Update padding, paragraph size

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                         Open Mic Night Cracked!
                     </h2>
                     <p>
-                        We're back at Prozak on Saturday April 29, 2023 at 8PM to scratch our heads at the state of affairs, guzzle beer, and share a story, poem, or song or two. Open theme. Pretty much anything goes. If you've got something to say, DM us on Facebook to reserve your spot. Registrations open Sunday April 23.🎤</p>
+                        We're back at Prozak on Saturday April 29, 2023 at 8PM to scratch our heads at the state of affairs, guzzle beer, and share a story, poem, or song or two. Open theme. Pretty much anything goes. If you've got something to say, DM us on Facebook to reserve your spot. Registrations open Sunday April 23.<span class="thin-space"></span>🎤</p>
                     <p>
                         18 April 2023
                     </p>    
