--- a/max-sheridan.html
+++ b/max-sheridan.html
@@ -13,11 +13,11 @@
         <link rel="manifest" href="/manifest.json" type="application/json">
         <link rel="canonical" href="https://writecy.com/max-sheridan">
         <title>Max Sheridan - Write CY</title>  
-        <meta name="description" content="Performances by Write CY Co-founder May Sheridan.">
+        <meta name="description" content="Performances by Write CY Co-founder Max Sheridan.">
         <meta name="thumbnail" content="https://writecy.com/assets/images/why.webp">
         <meta property="og:site_name" content="Write CY">
         <meta property="og:title" content="Info">
-        <meta property="og-description" content="Performances by Write CY Co-founder May Sheridan.">
+        <meta property="og-description" content="Performances by Write CY Co-founder Max Sheridan.">
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://writecy.com/max-sheridan">
         <meta property="og:image" content="https://writecy.com/assets/images/why.webp">
