Rename spacer class

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
                     <li>
                         <a href="/" aria-current="page" class="active">News</a>
                     </li>
-                    <li class="spacer" aria-hidden="true"></li>
+                    <li class="space" aria-hidden="true"></li>
                     <li>
                         <a href="/info">Info</a>
                     </li>
-                    <li class="spacer" aria-hidden="true"></li>
+                    <li class="space" aria-hidden="true"></li>
                     <li>
                         <a href="/contact" aria-label="Contact">Hello</a>
                     </li>
@@ -358,7 +358,7 @@
                 <a href="https://soundcloud.com/user-178729486" aria-label="Link to Soundcloud">
                     <svg class="social-doodads" viewBox="0 0 256 256"><path fill="currentColor" d="M24 120v48a8 8 0 0 1-16 0v-48a8 8 0 0 1 16 0m24-32a8 8 0 0 0-8 8v96a8 8 0 0 0 16 0V96a8 8 0 0 0-8-8m32-8a8 8 0 0 0-8 8v104a8 8 0 0 0 16 0V88a8 8 0 0 0-8-8m32-32a8 8 0 0 0-8 8v136a8 8 0 0 0 16 0V56a8 8 0 0 0-8-8m110.8 58.3A80 80 0 0 0 144 40a8 8 0 0 0 0 16 64 64 0 0 1 63.7 57.5 8 8 0 0 0 6.4 7A32 32 0 0 1 208 184h-64a8 8 0 0 0 0 16h64a48 48 0 0 0 14.8-93.7"/></svg>
                 </a>
-                <span class="spacer" aria-hidden="true"></span>
+                <span class="space" aria-hidden="true"></span>
                 <a href="https://www.facebook.com/writecyprus/" aria-label="Link to Facebook">
                     <svg class="social-doodads" viewBox="0 0 256 256"><path fill="currentColor" d="M128 24a104 104 0 1 0 104 104A104 104 0 0 0 128 24m8 191.6V152h24a8 8 0 0 0 0-16h-24v-24a16 16 0 0 1 16-16h16a8 8 0 0 0 0-16h-16a32 32 0 0 0-32 32v24H96a8 8 0 0 0 0 16h24v63.6a88 88 0 1 1 16 0"/></svg>
                 </a>
