--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
         <meta name="color-scheme" content="light dark">
         <link rel="preload" href="/assets/type/mono45headline_light.woff2" as="font" type="font/woff2" crossorigin="anonymous">
         <link rel="preload" href="/assets/type/g2erika_regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-        <link rel="stylesheet" href="/assets/css/style.min.css?v=2">
+        <link rel="stylesheet" href="/assets/css/style.min.css?v=3">
         <link rel="icon" href="/favicon.ico" type="image/x-icon" sizes="32x32">
         <link rel="icon" href="/favicon.svg" type="image/svg+xml" sizes="any">
         <link rel="apple-touch-icon" href="/assets/icons/apple_touch_icon.png" type="image/png">
@@ -33,7 +33,7 @@
                 "url": "https://writecy.com/contact"
             }
         </script>  
-        <style>form{width:100%;margin-block-start:var(--big-gap);}label{font-family:var(--body);font-size:var(--paragraph);line-height:var(--line-height);color:var(--primary)}input{width:100%;margin-block-start:.5rem;margin-block-end:var(--big-gap);padding:1rem .5rem;border:1.5px solid var(--primary);border-radius:.25rem;font-family:var(--body);font-size:var(--paragraph);color:var(--dark-primary);background-color:var(--form-field-background)}textarea{min-width:100%;max-width:100%;min-height:100px;max-height:600px;margin-block-end:var(--gap);padding:1rem .5rem;border:1.5px solid var(--primary);border-radius:.25rem;font-family:var(--body-font);font-size:var(--paragraph);line-height:var(--line-height);color:var(--dark-primary);background-color:var(--form-field-background)}button{border:1.5px solid var(--accent);border-radius:.25rem;padding:1rem 2rem;font-family:var(--body);font-size:var(--paragraph);color:var(--background);background-color:var(--accent);cursor:pointer}.thanks{color:var(--accent)}@media(hover:hover) and (pointer:fine){button:hover{border:1.5px solid var(--primary);background-color:var(--primary)}}</style>
+        <style>form{width:100%;margin-block-start:var(--space-2);}label{font-family:var(--body);font-size:var(--paragraph);line-height:var(--line-height);color:var(--primary)}input{width:100%;margin-block-start:.5rem;margin-block-end:var(--space-2);padding:1rem .5rem;border:1.5px solid var(--primary);border-radius:.25rem;font-family:var(--body);font-size:var(--paragraph);color:var(--dark-primary);background-color:var(--form-field-background)}textarea{min-width:100%;max-width:100%;min-height:100px;max-height:600px;margin-block-end:var(--space-0);padding:1rem .5rem;border:1.5px solid var(--primary);border-radius:.25rem;font-family:var(--body-font);font-size:var(--paragraph);line-height:var(--line-height);color:var(--dark-primary);background-color:var(--form-field-background)}button{border:1.5px solid var(--accent);border-radius:.25rem;padding:1rem 2rem;font-family:var(--body);font-size:var(--paragraph);color:var(--background);background-color:var(--accent);cursor:pointer}.thanks{color:var(--accent)}@media(hover:hover) and (pointer:fine){button:hover{border:1.5px solid var(--primary);background-color:var(--primary)}}</style>
     </head>
     <body>
         <a href="#main-content" class="skip-link">Skip to content</a>
