--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="color-scheme" content="light dark">
         <link rel="preload" href="/assets/type/mono45headline_light.woff2" as="font" type="font/woff2" crossorigin="anonymous">
         <link rel="preload" href="/assets/type/g2erika_regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-        <link rel="stylesheet" href="/assets/css/style.min.css?v=2">
+        <link rel="stylesheet" href="/assets/css/style.min.css?v=3">
         <link rel="icon" href="/favicon.ico" type="image/x-icon" sizes="32x32">
         <link rel="icon" href="/favicon.svg" type="image/svg+xml" sizes="any">
         <link rel="apple-touch-icon" href="/assets/icons/apple_touch_icon.png" type="image/png">
@@ -33,7 +33,7 @@
                 "url": "https://writecy.com"
             }
         </script>
-        <style>.audio-player{max-width:100%;margin-block:var(--big-gap);-webkit-tap-highlight-color:#FFF0;outline:none;touch-action:manipulation}.controls{display:flex;align-items:center}.play-pause{display:flex;align-items:center;justify-content:center;width:24px;height:24px;margin-right:.5rem;padding:0;border-radius:50%;background-color:var(--accent);cursor:pointer}.play-pause .icon{width:75%;height:75%}.play-pause.play .icon polygon{fill:var(--background)}.play-pause.pause .icon rect{fill:var(--background)}.progress{position:relative;flex:1;height:2px;background-color:lightgray;cursor:pointer}.progress-filled{width:0%;height:100%;background-color:var(--accent)}.progress input{position:absolute;top:-.45rem;width:100%;height:16px;margin:0;background:#FFF0;-webkit-appearance:none;-moz-appearance:none;appearance:none}.progress input::-webkit-slider-thumb{width:10px;height:10px;margin:0;border:0;border-radius:50%;background-color:var(--accent);-webkit-appearance:none;appearance:none;cursor:pointer}.progress input::-moz-range-thumb{width:10px;height:10px;margin:0;border:0;border-radius:50%;background-color:var(--accent);-moz-appearance:none;appearance:none;cursor:pointer}</style>
+        <style>.audio-player{max-width:100%;margin-block:var(--space-1);-webkit-tap-highlight-color:#FFF0;outline:none;touch-action:manipulation}.controls{display:flex;align-items:center}.play-pause{display:flex;align-items:center;justify-content:center;width:24px;height:24px;margin-right:.5rem;padding:0;border-radius:50%;background-color:var(--accent);cursor:pointer}.play-pause .icon{width:75%;height:75%}.play-pause.play .icon polygon{fill:var(--background)}.play-pause.pause .icon rect{fill:var(--background)}.progress{position:relative;flex:1;height:2px;background-color:lightgray;cursor:pointer}.progress-filled{width:0%;height:100%;background-color:var(--accent)}.progress input{position:absolute;top:-.45rem;width:100%;height:16px;margin:0;background:#FFF0;-webkit-appearance:none;-moz-appearance:none;appearance:none}.progress input::-webkit-slider-thumb{width:10px;height:10px;margin:0;border:0;border-radius:50%;background-color:var(--accent);-webkit-appearance:none;appearance:none;cursor:pointer}.progress input::-moz-range-thumb{width:10px;height:10px;margin:0;border:0;border-radius:50%;background-color:var(--accent);-moz-appearance:none;appearance:none;cursor:pointer}</style>
     </head>
     <body>
         <a href="#main-content" class="skip-link">Skip to content</a>
@@ -344,7 +344,7 @@
                         </svg>
                     </div>
                 </article>
-                <div class="pagination nav" aria-hidden="true">
+                <div class="pagination nav margins-off" aria-hidden="true">
                     <div class="pagination-inner">
                         <div class="back">
                             <p>
