Update max sheridan

--- a/max-sheridan.html
+++ b/max-sheridan.html
@@ -57,7 +57,7 @@
                     <div class="overlay"></div>
                     <div class="track">
                         <h2 class="track-title">Why?</h2>
-                        <p class="track-description"> Write CY co-founder Max Sheridan performing at Open Mic Night 7 in November 2016.</p>
+                        <p class="track-description"> Write CY co-founder Max Sheridan reading at Open Mic Night 7 in November 2016.</p>
                         <div class="audio-player margins-off">
                             <audio preload="none" src="assets/audio/why.mp3" title="Max Sheridan reading Why"></audio>
                             <div class="controls">
