Add fluid spacing

--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
         <link rel="preload" href="/assets/type/mono45headline_light.woff2" as="font" type="font/woff2" crossorigin="anonymous">
         <link rel="preload" href="/assets/type/g2erika_regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
         <link rel="stylesheet" href="/assets/css/style.min.css?v=3">
+        <style>form{width:100%;margin-block-start:var(--space-2);}label{font-family:var(--body);font-size:var(--paragraph);line-height:var(--line-height);color:var(--primary)}input{width:100%;margin-block-start:var(--space--1);margin-block-end:var(--space-2);padding:1rem .5rem;border:1.5px solid var(--primary);border-radius:.25rem;font-family:var(--body);font-size:var(--paragraph);color:var(--dark-primary);background-color:var(--form-field-background)}textarea{min-width:100%;max-width:100%;min-height:100px;max-height:600px;margin-block-start:var(--space--1);margin-block-end:var(--space-1);padding:1rem .5rem;border:1.5px solid var(--primary);border-radius:.25rem;font-family:var(--body-font);font-size:var(--paragraph);line-height:var(--line-height);color:var(--dark-primary);background-color:var(--form-field-background)}button{border:1.5px solid var(--accent);border-radius:.25rem;padding:1rem 2rem;font-family:var(--body);font-size:var(--paragraph);color:var(--background);background-color:var(--accent);cursor:pointer}.thanks{color:var(--accent)}@media(hover:hover) and (pointer:fine){button:hover{border:1.5px solid var(--primary);background-color:var(--primary)}}</style>
         <link rel="icon" href="/favicon.ico" type="image/x-icon" sizes="32x32">
         <link rel="icon" href="/favicon.svg" type="image/svg+xml" sizes="any">
         <link rel="apple-touch-icon" href="/assets/icons/apple_touch_icon.png" type="image/png">
@@ -33,7 +34,6 @@
                 "url": "https://writecy.com/contact"
             }
         </script>  
-        <style>form{width:100%;margin-block-start:var(--space-2);}label{font-family:var(--body);font-size:var(--paragraph);line-height:var(--line-height);color:var(--primary)}input{width:100%;margin-block-start:.5rem;margin-block-end:var(--space-2);padding:1rem .5rem;border:1.5px solid var(--primary);border-radius:.25rem;font-family:var(--body);font-size:var(--paragraph);color:var(--dark-primary);background-color:var(--form-field-background)}textarea{min-width:100%;max-width:100%;min-height:100px;max-height:600px;margin-block-end:var(--space-0);padding:1rem .5rem;border:1.5px solid var(--primary);border-radius:.25rem;font-family:var(--body-font);font-size:var(--paragraph);line-height:var(--line-height);color:var(--dark-primary);background-color:var(--form-field-background)}button{border:1.5px solid var(--accent);border-radius:.25rem;padding:1rem 2rem;font-family:var(--body);font-size:var(--paragraph);color:var(--background);background-color:var(--accent);cursor:pointer}.thanks{color:var(--accent)}@media(hover:hover) and (pointer:fine){button:hover{border:1.5px solid var(--primary);background-color:var(--primary)}}</style>
     </head>
     <body>
         <a href="#main-content" class="skip-link">Skip to content</a>
@@ -46,11 +46,11 @@
                     <li>
                         <a href="/">News</a>
                     </li>
-                    <li class="space" aria-hidden="true"></li>
+                    <li class="gap--1" aria-hidden="true"></li>
                     <li>
                         <a href="/info">Info</a>
                     </li>
-                    <li class="space" aria-hidden="true"></li>
+                    <li class="gap--1" aria-hidden="true"></li>
                     <li>
                         <a href="/contact" aria-current="page" class="active" aria-label="Contact">Hello</a>
                     </li>
@@ -104,7 +104,7 @@
                 <a href="https://soundcloud.com/user-178729486" aria-label="Link to Soundcloud">
                     <svg class="social-doodads" viewBox="0 0 256 256"><path fill="currentColor" d="M24 120v48a8 8 0 0 1-16 0v-48a8 8 0 0 1 16 0m24-32a8 8 0 0 0-8 8v96a8 8 0 0 0 16 0V96a8 8 0 0 0-8-8m32-8a8 8 0 0 0-8 8v104a8 8 0 0 0 16 0V88a8 8 0 0 0-8-8m32-32a8 8 0 0 0-8 8v136a8 8 0 0 0 16 0V56a8 8 0 0 0-8-8m110.8 58.3A80 80 0 0 0 144 40a8 8 0 0 0 0 16 64 64 0 0 1 63.7 57.5 8 8 0 0 0 6.4 7A32 32 0 0 1 208 184h-64a8 8 0 0 0 0 16h64a48 48 0 0 0 14.8-93.7"/></svg>
                 </a>
-                <span class="space" aria-hidden="true"></span>
+                <span class="gap--1" aria-hidden="true"></span>
                 <a href="https://www.facebook.com/writecyprus/" aria-label="Link to Facebook">
                     <svg class="social-doodads" viewBox="0 0 256 256"><path fill="currentColor" d="M128 24a104 104 0 1 0 104 104A104 104 0 0 0 128 24m8 191.6V152h24a8 8 0 0 0 0-16h-24v-24a16 16 0 0 1 16-16h16a8 8 0 0 0 0-16h-16a32 32 0 0 0-32 32v24H96a8 8 0 0 0 0 16h24v63.6a88 88 0 1 1 16 0"/></svg>
                 </a>
