--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
         <link rel="apple-touch-icon" href="/assets/icons/apple_touch_icon.png?v=2" type="image/png">
         <link rel="manifest" href="/manifest.json" type="application/json">
         <title>Page Not Found - Write CY</title>     
-        <style>body{justify-content:center}h1{color:var(--accent)}</style>
+        <style>body{justify-content:center}h1{color:var(--accent)}.acme-content-wrapper>*+*{margin-block-start:var(--space-0)}</style>
     </head>
     <body>
         <main class="center">
