--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <meta name="color-scheme" content="light dark">
         <link rel="preload" href="/assets/type/mono45headline_light.woff2" as="font" type="font/woff2" crossorigin="anonymous">
         <link rel="preload" href="/assets/type/g2erika_regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-        <link rel="stylesheet" href="/assets/css/style.css?v=3">
+        <link rel="stylesheet" href="/assets/css/style.min.css?v=3">
+        <style>.audio-player{max-width:100%;margin-block:var(--space-1);-webkit-tap-highlight-color:#FFF0;outline:none;touch-action:manipulation}.controls{display:flex;align-items:center}.play-pause{display:flex;align-items:center;justify-content:center;width:24px;height:24px;margin-right:.5rem;padding:0;border-radius:50%;background-color:var(--accent);cursor:pointer}.play-pause .icon{width:75%;height:75%}.play-pause.play .icon polygon{fill:var(--background)}.play-pause.pause .icon rect{fill:var(--background)}.progress{position:relative;flex:1;height:2px;background-color:lightgray;cursor:pointer}.progress-filled{width:0%;height:100%;background-color:var(--accent)}.progress input{position:absolute;top:-.45rem;width:100%;height:16px;margin:0;background:#FFF0;-webkit-appearance:none;-moz-appearance:none;appearance:none}.progress input::-webkit-slider-thumb{width:10px;height:10px;margin:0;border:0;border-radius:50%;background-color:var(--accent);-webkit-appearance:none;appearance:none;cursor:pointer}.progress input::-moz-range-thumb{width:10px;height:10px;margin:0;border:0;border-radius:50%;background-color:var(--accent);-moz-appearance:none;appearance:none;cursor:pointer}</style>
         <link rel="icon" href="/favicon.ico" type="image/x-icon" sizes="32x32">
         <link rel="icon" href="/favicon.svg" type="image/svg+xml" sizes="any">
         <link rel="apple-touch-icon" href="/assets/icons/apple_touch_icon.png" type="image/png">
@@ -33,7 +34,6 @@
                 "url": "https://writecy.com"
             }
         </script>
-        <style>.audio-player{max-width:100%;margin-block:var(--space-1);-webkit-tap-highlight-color:#FFF0;outline:none;touch-action:manipulation}.controls{display:flex;align-items:center}.play-pause{display:flex;align-items:center;justify-content:center;width:24px;height:24px;margin-right:.5rem;padding:0;border-radius:50%;background-color:var(--accent);cursor:pointer}.play-pause .icon{width:75%;height:75%}.play-pause.play .icon polygon{fill:var(--background)}.play-pause.pause .icon rect{fill:var(--background)}.progress{position:relative;flex:1;height:2px;background-color:lightgray;cursor:pointer}.progress-filled{width:0%;height:100%;background-color:var(--accent)}.progress input{position:absolute;top:-.45rem;width:100%;height:16px;margin:0;background:#FFF0;-webkit-appearance:none;-moz-appearance:none;appearance:none}.progress input::-webkit-slider-thumb{width:10px;height:10px;margin:0;border:0;border-radius:50%;background-color:var(--accent);-webkit-appearance:none;appearance:none;cursor:pointer}.progress input::-moz-range-thumb{width:10px;height:10px;margin:0;border:0;border-radius:50%;background-color:var(--accent);-moz-appearance:none;appearance:none;cursor:pointer}</style>
     </head>
     <body>
         <a href="#main-content" class="skip-link">Skip to content</a>
@@ -46,11 +46,11 @@
                     <li>
                         <a href="/" aria-current="page" class="active">News</a>
                     </li>
-                    <li class="space" aria-hidden="true"></li>
+                    <li class="gap--1" aria-hidden="true"></li>
                     <li>
                         <a href="/info">Info</a>
                     </li>
-                    <li class="space" aria-hidden="true"></li>
+                    <li class="gap--1" aria-hidden="true"></li>
                     <li>
                         <a href="/contact" aria-label="Contact">Hello</a>
                     </li>
@@ -68,17 +68,15 @@
             </div>
             <div class="acme-content-wrapper">
                 <article>
-                    <div class="some-words">
-                        <h2>
-                            Dear People
-                        </h2>
-                        <p>
-                            Welcome to our new-ish home on the web. We aren't running any workshops these days. Scroll down for a few recordings from the vault and any upcoming events.
-                        </p> 
-                        <p>
-                            27 April 2024
-                        </p>     
-                    </div>
+                    <h2>
+                        Dear People
+                    </h2>
+                    <p>
+                        Welcome to our new-ish home on the web. We aren't running any workshops these days. Scroll down for a few recordings from the vault and any upcoming events.
+                    </p> 
+                    <p class="date">
+                        27 April 2024
+                    </p>     
                 </article>
                 <article>
                     <img src="/assets/images/two_poems.webp" alt="Marilena Zackheos (feet) reading poems from Carmine Lullabies" width="600" height="600" fetchpriority="high" loading="eager">
@@ -88,7 +86,7 @@
                     <p>
                         From the Write CY time machine. Poet Marilena Zackheos reads two poems from Carmine Lullabies in her snazzy Scooby Doo slippers. This reading is from Open Mic Night 5 back in October 2016.
                     </p>
-                    <div class="audio-player margins-off">
+                    <div class="audio-player">
                         <audio preload="none" src="assets/audio/two_poems.mp3" title="Two Poems by Marilena Zackheos"></audio>
                         <div class="controls">
                         <button class="play-pause play" aria-label="Play audio">
@@ -140,7 +138,7 @@
                     <p>
                         This recording is from our archives. It originally appeared on December 22, 2016.
                     </p>
-                    <div class="audio-player margins-off">
+                    <div class="audio-player">
                         <audio preload="none" src="assets/audio/death_of_certainty.mp3" title="The Death of Certainty and the Wonderful World of Sushi by Argyris Loizou"></audio>
                         <div class="controls">
                         <button class="play-pause play" aria-label="Play audio">
@@ -160,7 +158,7 @@
                             </div>
                         </div>
                     </div>
-                    <p>
+                    <p class="date">
                         06 Feb 2023
                     </p>     
                 </article>
@@ -178,7 +176,7 @@
                     <p>
                         This recording is from our archives. It originally appeared on January 7, 2019.
                     </p>
-                    <div class="audio-player margins-off">
+                    <div class="audio-player">
                         <audio preload="none" src="assets/audio/clinic_of_meaning.mp3" title="The Procedure of Limb Amputation and Its Benefits by Kalli Koulloufidou"></audio>
                         <div class="controls">
                         <button class="play-pause play" aria-label="Play audio">
@@ -198,7 +196,7 @@
                             </div>
                         </div>
                     </div>
-                    <p>
+                    <p class="date"> 
                         04 Feb 2023
                     </p>       
                 </article>
@@ -213,7 +211,7 @@
                     <p>
                         This recording is from our archives. It originally appeared on Febrary 20, 2019.
                     </p>
-                    <div class="audio-player margins-off">
+                    <div class="audio-player">
                         <audio preload="none" src="assets/audio/dear_santa.mp3" title="Dear Santa, You Old Fat Fuck by Kimberly Ioannou"></audio>
                         <div class="controls">
                         <button class="play-pause play" aria-label="Play audio">
@@ -233,7 +231,7 @@
                             </div>
                         </div>
                     </div>
-                    <p>
+                    <p class="date">
                         03 Feb 2023
                     </p>  
                 </article>
@@ -245,7 +243,7 @@
                     <p>
                         After three years of serious Rip Van Winkeling, we're back at Prozak. Bring your original stories, poems, songs, rants, and spoken word on Saturday March 4, 2023 at 8PM. Performers, please DM us on Facebook to reserve your spot.
                     </p> 
-                    <p>
+                    <p class="date">
                         01 Feb 2023
                     </p>     
                 </article>
@@ -257,7 +255,7 @@
                     <p>
                         Write CY co-founder Max Sheridan reads a short piece about a guy who's got a lot of questions for his wife. This recording is from Open Mic Night 7 in November 2016.
                     </p>
-                    <div class="audio-player margins-off">
+                    <div class="audio-player">
                         <audio preload="none" src="assets/audio/why.mp3" title="Max Sheridan reading Why"></audio>
                         <div class="controls">
                         <button class="play-pause play" aria-label="Play audio">
@@ -277,7 +275,7 @@
                             </div>
                         </div>
                     </div>
-                    <p>
+                    <p class="date">
                         14 December 2022
                     </p>
                 </article>
@@ -289,7 +287,7 @@
                     <p>
                         Join us for our second Open Air Open Mic at Kala Kathoumena on Sunday June 5, 2022 at 17:00. There's no theme this time, so bring whatever you've got. Enjoy a cold beer. Blow us away with your words. See you Sunday.
                     </p> 
-                    <p>
+                    <p class="date">
                         29 May 2022
                     </p>     
                 </article>
@@ -312,7 +310,7 @@
                     <p>
                         Show your support by joining the event on Facebook.
                     </p> 
-                    <p>
+                    <p class="date">
                         14 May 2022
                     </p>     
                 </article>
@@ -335,7 +333,7 @@
                             </svg>
                         </a>
                     </p>
-                    <p>
+                    <p class="date">
                         07 May 2022
                     </p>   
                     <div id="coda">
@@ -344,7 +342,7 @@
                         </svg>
                     </div>
                 </article>
-                <div class="pagination nav margins-off" aria-hidden="true">
+                <div class="pagination nav" aria-hidden="true">
                     <div class="pagination-inner">
                         <div class="back">
                             <p>
@@ -365,7 +363,7 @@
                 <a href="https://soundcloud.com/user-178729486" aria-label="Link to Soundcloud">
                     <svg class="social-doodads" viewBox="0 0 256 256"><path fill="currentColor" d="M24 120v48a8 8 0 0 1-16 0v-48a8 8 0 0 1 16 0m24-32a8 8 0 0 0-8 8v96a8 8 0 0 0 16 0V96a8 8 0 0 0-8-8m32-8a8 8 0 0 0-8 8v104a8 8 0 0 0 16 0V88a8 8 0 0 0-8-8m32-32a8 8 0 0 0-8 8v136a8 8 0 0 0 16 0V56a8 8 0 0 0-8-8m110.8 58.3A80 80 0 0 0 144 40a8 8 0 0 0 0 16 64 64 0 0 1 63.7 57.5 8 8 0 0 0 6.4 7A32 32 0 0 1 208 184h-64a8 8 0 0 0 0 16h64a48 48 0 0 0 14.8-93.7"/></svg>
                 </a>
-                <span class="space" aria-hidden="true"></span>
+                <span class="gap--1" aria-hidden="true"></span>
                 <a href="https://www.facebook.com/writecyprus/" aria-label="Link to Facebook">
                     <svg class="social-doodads" viewBox="0 0 256 256"><path fill="currentColor" d="M128 24a104 104 0 1 0 104 104A104 104 0 0 0 128 24m8 191.6V152h24a8 8 0 0 0 0-16h-24v-24a16 16 0 0 1 16-16h16a8 8 0 0 0 0-16h-16a32 32 0 0 0-32 32v24H96a8 8 0 0 0 0 16h24v63.6a88 88 0 1 1 16 0"/></svg>
                 </a>
