Replace gap classes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="color-scheme" content="light dark">
         <link rel="preload" href="/assets/type/mono45headline_light.woff2" as="font" type="font/woff2" crossorigin="anonymous">
         <link rel="preload" href="/assets/type/g2erika_regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-        <link rel="stylesheet" href="/assets/css/style.min.css?v=3">
+        <link rel="stylesheet" href="/assets/css/style.css?v=3">
         <style>.audio-player{max-width:100%;margin-block:var(--space-1);-webkit-tap-highlight-color:#FFF0;outline:none;touch-action:manipulation}.controls{display:flex;align-items:center}.play-pause{display:flex;align-items:center;justify-content:center;width:24px;height:24px;margin-right:.5rem;padding:0;border-radius:50%;background-color:var(--accent);cursor:pointer}.play-pause .icon{width:75%;height:75%}.play-pause.play .icon polygon{fill:var(--background)}.play-pause.pause .icon rect{fill:var(--background)}.progress{position:relative;flex:1;height:2px;background-color:lightgray;cursor:pointer}.progress-filled{width:0%;height:100%;background-color:var(--accent)}.progress input{position:absolute;top:-.45rem;width:100%;height:16px;margin:0;background:#FFF0;-webkit-appearance:none;-moz-appearance:none;appearance:none}.progress input::-webkit-slider-thumb{width:10px;height:10px;margin:0;border:0;border-radius:50%;background-color:var(--accent);-webkit-appearance:none;appearance:none;cursor:pointer}.progress input::-moz-range-thumb{width:10px;height:10px;margin:0;border:0;border-radius:50%;background-color:var(--accent);-moz-appearance:none;appearance:none;cursor:pointer}</style>
         <link rel="icon" href="/favicon.ico" type="image/x-icon" sizes="32x32">
         <link rel="icon" href="/favicon.svg" type="image/svg+xml" sizes="any">
@@ -42,15 +42,13 @@
                 Write CY
             </a>
             <nav aria-label="primary">
-                <ul>
+                <ul class="with-gap">
                     <li>
                         <a href="/" aria-current="page" class="active">News</a>
                     </li>
-                    <li class="gap--1" aria-hidden="true"></li>
                     <li>
                         <a href="/info">Info</a>
                     </li>
-                    <li class="gap--1" aria-hidden="true"></li>
                     <li>
                         <a href="/contact" aria-label="Contact">Hello</a>
                     </li>
@@ -116,7 +114,7 @@
                         Open Mic Night Cracked!
                     </h2>
                     <p>
-                        We're back at Prozak on Saturday April 29, 2023 at 8PM to scratch our heads at the state of affairs, guzzle beer, and share a story, poem, or song or two. Open theme. Pretty much anything goes. If you've got something to say, DM us on Facebook to reserve your spot. Registrations open Sunday April 23.<span class="thin-space"></span>🎤</p>
+                        We're back at Prozak on Saturday April 29, 2023 at 8PM to scratch our heads at the state of affairs, guzzle beer, and share a story, poem, or song or two. Open theme. Pretty much anything goes. If you've got something to say, DM us on Facebook to reserve your spot. Registrations open Sunday April 23.<span class="space"></span>🎤</p>
                     <p>
                         18 April 2023
                     </p>    
@@ -359,11 +357,10 @@
             </div>   
         </main> 
         <footer aria-label="footer">
-            <div class="socials">
+            <div class="socials with-gap">
                 <a href="https://soundcloud.com/user-178729486" aria-label="Link to Soundcloud">
                     <svg class="social-doodads" viewBox="0 0 256 256"><path fill="currentColor" d="M24 120v48a8 8 0 0 1-16 0v-48a8 8 0 0 1 16 0m24-32a8 8 0 0 0-8 8v96a8 8 0 0 0 16 0V96a8 8 0 0 0-8-8m32-8a8 8 0 0 0-8 8v104a8 8 0 0 0 16 0V88a8 8 0 0 0-8-8m32-32a8 8 0 0 0-8 8v136a8 8 0 0 0 16 0V56a8 8 0 0 0-8-8m110.8 58.3A80 80 0 0 0 144 40a8 8 0 0 0 0 16 64 64 0 0 1 63.7 57.5 8 8 0 0 0 6.4 7A32 32 0 0 1 208 184h-64a8 8 0 0 0 0 16h64a48 48 0 0 0 14.8-93.7"/></svg>
                 </a>
-                <span class="gap--1" aria-hidden="true"></span>
                 <a href="https://www.facebook.com/writecyprus/" aria-label="Link to Facebook">
                     <svg class="social-doodads" viewBox="0 0 256 256"><path fill="currentColor" d="M128 24a104 104 0 1 0 104 104A104 104 0 0 0 128 24m8 191.6V152h24a8 8 0 0 0 0-16h-24v-24a16 16 0 0 1 16-16h16a8 8 0 0 0 0-16h-16a32 32 0 0 0-32 32v24H96a8 8 0 0 0 0 16h24v63.6a88 88 0 1 1 16 0"/></svg>
                 </a>
