--- a/404.html
+++ b/404.html
@@ -13,14 +13,20 @@
         <link rel="apple-touch-icon" href="/assets/icons/apple_touch_icon.png?v=2" type="image/png">
         <link rel="manifest" href="/manifest.json" type="application/json">
         <title>Page Not Found - Write CY</title>     
-        <style>body{justify-content:center}h1{color:var(--accent)}.acme-content-wrapper>*+*{margin-block-start:var(--space-0)}</style>
+        <style>* + * {margin-block-start: var(--space-0)}</style>
     </head>
     <body>
         <main class="center">
             <div class="acme-content-wrapper">
-                <h1 >404</h1>
-                <p>Sorry, no can find.</p>
-                <p><a href="/">writecy.com</a></p>
+                <h1 class="emphasis"> 
+                    404 
+                </h1>
+                <p>
+                    Sorry, no can find.
+                </p>
+                <p>
+                    <a href="/">writecy.com</a>
+                </p>
             </div>
         </main>
     </body>
