--- a/contact.html
+++ b/contact.html
@@ -42,15 +42,13 @@
                 Write CY
             </a>
             <nav aria-label="primary">
-                <ul>
+                <ul class="with-gap">
                     <li>
                         <a href="/">News</a>
                     </li>
-                    <li class="gap--1" aria-hidden="true"></li>
                     <li>
                         <a href="/info">Info</a>
                     </li>
-                    <li class="gap--1" aria-hidden="true"></li>
                     <li>
                         <a href="/contact" aria-current="page" class="active" aria-label="Contact">Hello</a>
                     </li>
@@ -100,11 +98,10 @@
             </div>
         </main> 
         <footer aria-label="footer">
-            <div class="socials">
+            <div class="socials with-gap">
                 <a href="https://soundcloud.com/user-178729486" aria-label="Link to Soundcloud">
                     <svg class="social-doodads" viewBox="0 0 256 256"><path fill="currentColor" d="M24 120v48a8 8 0 0 1-16 0v-48a8 8 0 0 1 16 0m24-32a8 8 0 0 0-8 8v96a8 8 0 0 0 16 0V96a8 8 0 0 0-8-8m32-8a8 8 0 0 0-8 8v104a8 8 0 0 0 16 0V88a8 8 0 0 0-8-8m32-32a8 8 0 0 0-8 8v136a8 8 0 0 0 16 0V56a8 8 0 0 0-8-8m110.8 58.3A80 80 0 0 0 144 40a8 8 0 0 0 0 16 64 64 0 0 1 63.7 57.5 8 8 0 0 0 6.4 7A32 32 0 0 1 208 184h-64a8 8 0 0 0 0 16h64a48 48 0 0 0 14.8-93.7"/></svg>
                 </a>
-                <span class="gap--1" aria-hidden="true"></span>
                 <a href="https://www.facebook.com/writecyprus/" aria-label="Link to Facebook">
                     <svg class="social-doodads" viewBox="0 0 256 256"><path fill="currentColor" d="M128 24a104 104 0 1 0 104 104A104 104 0 0 0 128 24m8 191.6V152h24a8 8 0 0 0 0-16h-24v-24a16 16 0 0 1 16-16h16a8 8 0 0 0 0-16h-16a32 32 0 0 0-32 32v24H96a8 8 0 0 0 0 16h24v63.6a88 88 0 1 1 16 0"/></svg>
                 </a>
