Add utility class > 404

--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@
         <title>Page Not Found - Write CY</title>     
         <style>* + * {margin-block-start: var(--space-0)}</style>
     </head>
-    <body>
+    <body class="utility">
         <main class="center">
             <div class="acme-content-wrapper">
                 <h1 class="emphasis"> 
