--- a/404.html
+++ b/404.html
@@ -13,21 +13,18 @@
         <link rel="apple-touch-icon" href="/assets/icons/apple_touch_icon.png?v=2" type="image/png">
         <link rel="manifest" href="/manifest.json" type="application/json">
         <title>Page Not Found - Write CY</title>     
-        <style>* + * {margin-block-start: var(--space-0)}</style>
     </head>
-    <body class="utility">
-        <main class="center">
-            <div class="acme-content-wrapper">
-                <h1 class="emphasis"> 
-                    404 
-                </h1>
-                <p>
-                    Sorry, no can find.
-                </p>
-                <p>
-                    <a href="/">writecy.com</a>
-                </p>
-            </div>
+    <body>
+        <main class="utility center">
+            <h1 class="emphasis"> 
+                404 
+            </h1>
+            <p>
+                Sorry, no can find.
+            </p>
+            <p>
+                <a href="/">writecy.com</a>
+            </p>
         </main>
     </body>
 </html>
