Update styles, add flex start class

--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@
         <title>Page Not Found - Write CY</title>     
     </head>
     <body>
-        <main class="utility center">
+        <main class="center">
             <h1 class="emphasis"> 
                 404 
             </h1>
