--- a/info.html
+++ b/info.html
@@ -54,7 +54,7 @@
                 </ul>
             </nav>
         </header>
-        <main id="main-content" tabindex="-1">
+        <main id="main-content" class="start" tabindex="-1">
             <h1>
                 About
             </h1>
