--- a/max-sheridan.html
+++ b/max-sheridan.html
@@ -47,7 +47,7 @@
             </nav>
         </header>
         <main id="main-content" tabindex="-1">
-            <h1>
+            <h1 class="left">
                 Performances by <span class="gray">Max Sheridan</span>
             </h1>
             <div class="acme-audio-wrapper" style="background-image: url('/assets/images/why.webp')">
