--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
             </nav>
         </header>
         <main id="main-content" tabindex="-1">
-            <h1>
+            <h1 class="left">
                 Hello
             </h1>
             <p>
