--- a/info.html
+++ b/info.html
@@ -63,7 +63,7 @@
             </p>
             <hr aria-hidden="true">
             <p>
-                Site info: This site is a few HTML files hosted on GitHub. Body copy is set in Erika by Gruppo Due, headings are in Mono 45 Headline by EuropaType. Audio player is by <a href="https://weirdbubba.maxsheridan.com"> Weird Bubba Studio.</a> Design and art are by Tug Wells.
+                Site info: This site is a few HTML files hosted on GitHub. Body copy is set in Erika by Gruppo Due, headings are in Mono 45 Headline by EuropaType. Design and art are by Tug Wells.
             </p>
         </main>
         <footer aria-label="footer">
